--- a/docs/.vitepress/theme/styles/vars.css
+++ b/docs/.vitepress/theme/styles/vars.css
@@ -58,30 +58,12 @@
     var(--vp-c-brand-1) 30%,
     var(--vp-c-brand-next)
   );
-  --vp-home-hero-image-background-image: linear-gradient(
-    -45deg,
-    var(--vp-c-brand-1) 30%,
-    var(--vp-c-brand-next)
-  );
-  --vp-home-hero-image-filter: blur(80px);
-}
-
-@media (min-width: 640px) {
-  :root {
-    --vp-home-hero-image-filter: blur(120px);
-  }
-}
-
-@media (min-width: 960px) {
-  :root {
-    --vp-home-hero-image-filter: blur(120px);
-  }
+  --vp-home-hero-image-background-image: transparent;
 }
 
 /* Safari has a very bad performance on gradient and filter */
 .browser-safari, .browser-firefox {
   --vp-home-hero-image-background-image: transparent;
-  --vp-home-hero-image-filter: '';
 }
 
 /**
